# github-heatmap

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image-ci.yml  python-tests.yml
alembic/: env.py
alembic/versions/: 031b943e7b6f_add_public_profile_identity_fields.py  75e2a6eaa9fe_add_sync_runs_and_github_events_tables.py  dc9602c31d6c_create_users_table.py  fe79b76ace33_replace_users_with_github_profile_tables.py
backend/: db.py  github_api.py  main.py  models.py  settings.py
backend/api/routes/: heatmap.py
backend/api/schemas/: heatmap.py
backend/clients/: github_client.py
backend/core/: middleware.py  observability.py  security.py
backend/services/: heatmap_service.py
docs/: usage.md
tests/: test_main.py  test_rate_limit.py  test_sentry.py
