[project]
name = "github-heatmap"
version = "0.1.0"
description = "Simple FastAPI hello world demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
